[gd_scene load_steps=2 format=3 uid="uid://cbwytfi2eim5h"]

[ext_resource type="Script" uid="uid://bm184mqsxugfe" path="res://scripts/collectible.gd" id="1_bkg8t"]

[node name="Collectible" type="Node2D"]
script = ExtResource("1_bkg8t")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(4, 4)

[node name="RespawnTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
